Test Core Persistence Test Adapter
Reorganize structure
Lint projs

--- a/PostFeature/PostFeature/Sources/DetailsScreen/DetailsViewController.xib
+++ b/PostFeature/PostFeature/Sources/DetailsScreen/DetailsViewController.xib
@@ -32,7 +32,6 @@
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N11-KD-eD1">
                                     <rect key="frame" x="0.0" y="0.0" width="98.5" height="20.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NMT-qP-Vdx">
@@ -72,7 +71,7 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
                 <constraint firstItem="ubg-Ue-3pf" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="40" id="0Lr-Vl-S02"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="cVI-dr-Jbw" secondAttribute="trailing" constant="16" id="0s9-dL-rBD"/>
